// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a checkmark selectionStyle row 1`] = `
<div
  className="header"
  role="rowgroup"
>
  <div
    className="header-content"
    role="row"
  >
    <HeaderCheckMarkCell
      isDisabled={false}
      isIntermediate={false}
      isPadded={true}
      isSelectable={false}
      isSelected={false}
    />
  </div>
</div>
`;

exports[`should render a chevron selectionStyle row 1`] = `
<div
  className="header"
  role="rowgroup"
>
  <div
    className="header-content"
    role="row"
  >
    <HeaderChevronCell
      isPadded={true}
    />
  </div>
</div>
`;

exports[`should render a default header row 1`] = `
<div
  className="header"
  role="rowgroup"
>
  <div
    className="header-content"
    role="row"
  />
</div>
`;

exports[`should render a row with a cell 1`] = `
<div
  className="header"
  role="rowgroup"
>
  <div
    className="header-content"
    role="row"
  >
    <HeaderCell
      isSelectable={false}
      sort="none"
    />
  </div>
</div>
`;

exports[`should render a row with refCallback 1`] = `
<div
  className="header"
  role="rowgroup"
>
  <div
    className="header-content"
    role="row"
  />
</div>
`;
